# co-gaia

./: cabal.project  co-gaia.cabal  flake.nix
.github/workflows/: nix.yml
src/Gaia/: Chunk.hs  Hex.hs
test/: Spec.hs
